samples/_failures_safe/1761040317_eb4dd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6860dba.c: In function ‘main’:
./samples/SAFE/__tmp_d6860dba.c:175:5: error: expected expression at end of input
  175 |     if (len >
      |     ^~
./samples/SAFE/__tmp_d6860dba.c:175:5: error: expected declaration or statement at end of input
